--- a/package.json
+++ b/package.json
@@ -15,8 +15,25 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^5.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "dotenv": "^16.1.4",
+    "framer-motion": "^10.12.16",
+    "gatsby": "^5.8.0",
+    "gatsby-plugin-i18n": "^1.0.1",
+    "gatsby-plugin-image": "^3.10.0",
+    "gatsby-plugin-sharp": "^5.8.0",
+    "gatsby-source-filesystem": "^5.8.0",
+    "gatsby-source-strapi": "^3.2.0",
+    "gatsby-transformer-remark": "^6.10.0",
+    "gatsby-transformer-sharp": "^5.8.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-id-swiper": "^4.0.0",
+    "react-showdown": "^2.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "gatsby-plugin-postcss": "^6.11.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
