--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-sharp": "^5.8.0",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^5.8.0",
     "gatsby-source-strapi": "^3.2.0",
     "gatsby-transformer-remark": "^6.10.0",
@@ -28,7 +29,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-id-swiper": "^4.0.0",
-    "react-showdown": "^2.3.1"
+    "react-router-dom": "^6.14.2",
+    "react-showdown": "^2.3.1",
+    "use-query-params": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
