--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "framer-motion": "^10.12.16",
     "gatsby": "^5.8.0",
