--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-strapi": "^3.2.0",
     "gatsby-transformer-remark": "^6.10.0",
     "gatsby-transformer-sharp": "^5.8.0",
+    "mysql": "^2.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-id-swiper": "^4.0.0",
