--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-id-swiper": "^4.0.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.14.2",
     "react-showdown": "^2.3.1",
+    "react-youtube": "^10.1.0",
     "use-query-params": "^2.2.1"
   },
   "devDependencies": {
