--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource-variable/noto-sans-armenian": "^5.0.8",
+    "axios": "^1.5.1",
     "dotenv": "^16.1.4",
     "framer-motion": "^10.12.16",
     "gatsby": "^5.8.0",
